nginx-ingress-cel/restrict-ingress-paths/.kyverno-test/resources.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: good-paths
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /tea
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bad-path-root
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /root
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bad-path-secrets
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /var/run/secrets
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bad-path-etc-kubernetes
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /etc/kubernetes/admin.conf
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bad-path-serviceaccount
spec:
  rules:
  - host: cafe.example.com
    http:
      paths:
      - path: /var/run/kubernetes/serviceaccount
        pathType: Prefix
        backend:
          service:
            name: tea-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bad-path-etc
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /etc/config
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
