nginx-ingress-cel/restrict-ingress-paths/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-annotations
policies:
- ../restrict-ingress-paths.yaml
resources:
- resources.yaml
results:
- kind: Ingress
  policy: restrict-ingress-paths
  resources:
  - bad-path-root
  - bad-path-etc
  - bad-path-serviceaccount
  - bad-path-secrets
  result: fail
  rule: check-paths
- kind: Ingress
  policy: restrict-ingress-paths
  resources:
  - good-paths
  result: pass
  rule: check-paths
